# analysis-scripts

./: README.md  pyproject.toml  raytest.py  test.py
.github/ISSUE_TEMPLATE/: new_analysis_request.md
.github/workflows/: add-analysis-scripts-core-to-noaa-gfdl-conda-channel.yaml  ci-analysis.yml  python-package-conda.yml
analysis-scripts/: README.md  pyproject.toml
analysis-scripts/analysis_scripts/: __init__.py
analysis_scripts/: __init__.py  plugins.py
core/: pyproject.toml
core/analysis_scripts/: README.md  base_class.py  meta.yaml
core/analysis_scripts/analysis_scripts/: __init__.py  env_tool.py  plugins.py
core/analysis_scripts/tests/: test_env_tool.py  test_plugins.py
core/figure_tools/: pyproject.toml
core/figure_tools/figure_tools/: __init__.py  anomaly_timeseries.py  common_plots.py  global_mean_timeseries.py  lon_lat_map.py  time_subsets.py
figure_tools/: README.md  pyproject.toml
figure_tools/figure_tools/: __init__.py  figure.py  time_subsets.py  zonal_mean_map.py
freanalysis/: README.md  pyproject.toml
freanalysis/freanalysis/: __init__.py  create_catalog.py  plugins.py
freanalysis_aerosol/: README.md  pyproject.toml
freanalysis_aerosol/freanalysis_aerosol/: __init__.py
freanalysis_clouds/: pyproject.toml
freanalysis_clouds/freanalysis_clouds/: __init__.py
freanalysis_land/freanalysis_land/: __init__.py  land.py
freanalysis_radiation/: pyproject.toml
freanalysis_radiation/freanalysis_radiation/: __init__.py
html/: create_html.py
tests/: create_catalog.py  mdtf_timeslice_catalog.py  mdtf_timeslice_catalog.yaml  my_land_analysis.py  test_base_class.py  test_freanalysis_clouds.py  test_freanalysis_land.py
user-analysis-scripts/freanalysis_MDTF/: pyproject.toml
user-analysis-scripts/freanalysis_MDTF/freanalysis_MDTF/: MDTF.py
user-analysis-scripts/freanalysis_MDTF/freanalysis_MDTF/data/: pod_info.json  template_config.jsonc
user-analysis-scripts/freanalysis_MDTF/freanalysis_MDTF/scripts/: gen_config.py  gen_index.py  grab_plots.py
user-analysis-scripts/freanalysis_MDTF/tests/: test.py
user-analysis-scripts/freanalysis_aerosol/: pyproject.toml
user-analysis-scripts/freanalysis_aerosol/freanalysis_aerosol/: __init__.py  aerosols.py
user-analysis-scripts/freanalysis_clouds/: README.md
user-analysis-scripts/freanalysis_clouds/freanalysis_clouds/: __init__.py
user-analysis-scripts/freanalysis_clouds/tests/: test_freanalysis_clouds.py
user-analysis-scripts/freanalysis_land/: pyproject.toml
user-analysis-scripts/freanalysis_land/freanalysis_land/: land.py
user-analysis-scripts/freanalysis_land/tests/: test_freanalysis_land.py
user-analysis-scripts/freanalysis_radiation/: README.md  pyproject.toml
user-analysis-scripts/freanalysis_radiation/freanalysis_radiation/: __init__.py  radiation.py
user-analysis-scripts/freanalysis_radiation_atmos_av_mon/: pyproject.toml
user-analysis-scripts/freanalysis_radiation_atmos_av_mon/freanalysis_radiation_atmos_av_mon/: __init__.py
