[build-system]
requires = [
    "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "analysis_scripts"
version = "0.0.1"
dependencies = [
    "pytest",
]
requires-python = ">= 3.6"
authors = [
    {name = "developers"},
]
maintainers = [
    {name = "developer", email = "developer-email@address.domain"},
]
description = "Flexible Runtime Environment analysis package"
readme = "README.md"
classifiers = [
    "Programming Language :: Python"
]

[project.urls]
repository = "https://github.com/NOAA-GFDL/analysis-scripts.git"
