[build-system]
requires = [
    "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "freanalysis_aerosol"
version = "0.1"
dependencies = [
    "intake",
    "intake-esm",
]
requires-python = ">= 3.6"
authors = [
    {name = "developers"},
]
maintainers = [
    {name = "developer", email = "developer-email@address.domain"},
]
description = "Aerosol mass analyzer for GFDL model output"
readme = "README.md"
classifiers = [
    "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/menzel-gfdl/analysis-scripts.git"
